[gd_scene load_steps=10 format=3 uid="uid://8218tcx2s5tx"]

[ext_resource type="Script" path="res://Player.gd" id="1_igckq"]
[ext_resource type="Script" path="res://DeckUI.gd" id="2_0nxp5"]
[ext_resource type="Script" path="res://Player UI.gd" id="2_5guur"]
[ext_resource type="Script" path="res://HPbar.gd" id="3_tt8v0"]
[ext_resource type="Script" path="res://Show_cards.gd" id="4_onmjb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wiv65"]
radius = 5.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rw2qt"]
animations = [{
"frames": [],
"loop": true,
"name": &"block",
"speed": 5.0
}]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_b2ixi"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_oyvh4"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(416, 284)
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.5
script = ExtResource("1_igckq")

[node name="Player_hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wiv65")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rw2qt")
animation = &"block"

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-5, -5)
color = Color(0.976471, 0.443137, 0.239216, 1)
texture = SubResource("PlaceholderTexture2D_b2ixi")
polygon = PackedVector2Array(0, 0, 10, 0, 10, 10, 0, 10)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_use_custom = true
debug_path_custom_point_size = 0.0

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_oyvh4")

[node name="Player UI" type="CanvasLayer" parent="."]
script = ExtResource("2_5guur")

[node name="DeckUI" type="Label" parent="Player UI"]
offset_left = 1024.0
offset_top = 368.0
offset_right = 1130.0
offset_bottom = 450.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
script = ExtResource("2_0nxp5")
metadata/_edit_use_anchors_ = true

[node name="HPbar" type="Label" parent="Player UI"]
offset_left = 27.0
offset_top = 8.0
offset_right = 67.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
script = ExtResource("3_tt8v0")
metadata/_edit_use_anchors_ = true

[node name="Show_cards" type="Button" parent="Player UI"]
offset_left = 1026.0
offset_top = 493.0
offset_right = 1122.0
offset_bottom = 524.0
toggle_mode = true
text = "Show Hand"
script = ExtResource("4_onmjb")
metadata/_edit_use_anchors_ = true

[node name="draw" type="Button" parent="Player UI"]
offset_left = 1026.0
offset_top = 532.0
offset_right = 1122.0
offset_bottom = 563.0
text = "draw"
metadata/_edit_use_anchors_ = true

[node name="discard" type="Button" parent="Player UI"]
offset_left = 1026.0
offset_top = 573.0
offset_right = 1122.0
offset_bottom = 604.0
text = "discard"
metadata/_edit_use_anchors_ = true

[node name="CardHolder" type="ColorRect" parent="Player UI"]
offset_left = 273.0
offset_top = 487.0
offset_right = 858.0
offset_bottom = 632.0
color = Color(0.180392, 0.180392, 0.180392, 0.627451)
metadata/_edit_use_anchors_ = true

[node name="end_turn" type="Button" parent="Player UI"]
offset_left = 1027.0
offset_top = 454.0
offset_right = 1120.0
offset_bottom = 485.0
text = "End Turn"
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="Player UI/Show_cards" to="Player UI" method="_on_show_cards_toggled"]
[connection signal="pressed" from="Player UI/draw" to="Player UI" method="_on_draw_pressed"]
[connection signal="pressed" from="Player UI/discard" to="Player UI" method="_on_discard_pressed"]
[connection signal="pressed" from="Player UI/end_turn" to="Player UI" method="_on_end_turn_pressed"]
